# FProgr

./: Lab1.cabal  output.txt
src/: main.hs
src/Fcm/: fcm.hs
tests/: tests.hs
