name:                Lab1
version:             0.1.0.0
-- synopsis:         FCM algorithm   
-- description:         
-- license:             
license-file:        README.md
author:              Pavel Kalashnikov
maintainer:          p.kalashnikov@itransition.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Fcm
  build-depends:       base >=4.8 && <4.9,
                       matrix,
                       options,
                       random,
                       split
  hs-source-dirs:      src/Fcm
  default-language:    Haskell2010

executable Lab1
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       matrix,
                       options,
                       random,
                       split,
                       Lab1
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.8 && <4.9,
                       HUnit,
                       Lab1,
                       matrix
  default-language:    Haskell2010